fix the footer positioning and the double scroller
before the footer was sometimes displayed below the visible are of the page and
a double scroller was sometimes seen inside the item pages

--- a/scss/bhsclient.scss
+++ b/scss/bhsclient.scss
@@ -74,7 +74,6 @@ html {
             }
 			@at-root #below-header {
 				padding-bottom: $footer-height;
-				min-height: 100%;
 
 				@at-root #view {
 					position: relative;
