--- a/scss/main/_footer.scss
+++ b/scss/main/_footer.scss
@@ -1,7 +1,8 @@
 #footer-container {
-	position: relative;
-	margin-top: -$footer-height;
-	width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
 	height: $footer-height;
 	z-index: 2;
 	border-top: 1px solid #999999;
