--- a/scss/main/_item.scss
+++ b/scss/main/_item.scss
@@ -190,7 +190,6 @@
 #item-page-container {
     width: 100%;
     background: #F6F6F6;
-    overflow: auto;
 
     @at-root #item-page {
         width: $view-width;
